--- a/list.html
+++ b/list.html
@@ -83,7 +83,7 @@ color:red;
 <li>Ethiopia</li>
 </ol>
 
-<ul type="square"style="background:gold;width:100px">
+<ol type="square"  style="background:gold;width:100px">
 <li>Fiji</li>
 <li>Gabon</li>
 <li>Hawaii</li>
