--- a/menu list.html
+++ b/menu list.html
@@ -39,8 +39,9 @@ cursor:pointer;
 transition:0.50s;
 display:inline-block;
 margin-left:-5px;
-
 }
+
+  
 #menu ol li:hover
 {
 background:red;
@@ -71,7 +72,7 @@ color:orange
 
 <body>
 
-<div id="menu"
+<div id="menu">
 <ol>
 <li><a href="index.html">Home</a></li>
 <li><a href="practice.html">practice pages</a></li>
