--- a/index.html
+++ b/index.html
@@ -1,22 +1,76 @@
 <!doctype html>
 
 <html> 
-<head><title>index</title>
-<h1>welcome to our profile</h1>
-<hr/>
-<h2>home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;product&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;about us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;contact&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;photoshow</h2>
-<hr/>
+<head><title>my profile</title>
+<h1>welcome to my profile</h1>
+<hr style="color:red;background:red;size="20"hr>
+<div id="toph">
+
+<img src="images/meee.jpeg"width="200"height="200"
+title="Kartik">
+<h1> KARTIK PROFILE</h1>
+</div>
+</head>
+
+
+<div id="sunheading">
+<a href="practice.html">my work</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="http://www.behance.net/kartiksharma172">my behance work</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.instagram.com/get_glamorous_21?igsh=MW4yGQ3cGwxczBvNg=="> My page</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+</div>
 </head>
 <style>
+#subheading
+{
+widhth:900px;
+text-align:right;
+}
+
+#toph
+{
+margin:auto;
+color:red;
+width:40%
+text-align:center;
+}
+#about
+{
+background:yellow;
+margin-auto;
+width:10%;
+text-align:center;
+color:#dc2583;
+}
+
+#heading 
+{
+background:black;
+text-align:center;
+color:white;
+padding:40px;
+margin:auto;
+width:70%
+box-shadow: 10px 10px 10px gray;
+}
 
 </style>
+<body>
+<div id="about">
+<h3> About me </h3>
+</div>
+<div id="heading"
 
-<body bgcolor="#A4DFE9"
 <p>
-A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs. This is because paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the reader see the organization of the essay and grasp its main points.
-<br/><br/>
-Paragraphs can contain many different kinds of information. A paragraph could contain a series of brief examples or a single long illustration of a general point. It might describe a place, character, or process; narrate a series of events; compare or contrast two or more things; classify items into categories; or describe causes and effects. Regardless of the kind of information they contain, all paragraphs share certain characteristics. One of the most important of these is a topic sentence.
+Hello, i'am kartik sharma and i'am a student of Arena Animation. As a UI/UX & Graphic Designer, i've enjoyed tirning complex problems itno simple, beautiful designs. when i'm not pushing pixels, you'll find me doing makeup's, cooking. and also i have over 4 years of experience in the world of makeup and beauty and i'am passionate about making each and every client feel fabulus in theur own skin. my true passion is makeup but over the years i have added numerous beauty treatments to my skill set whicch i feel further enhnces my offering to all my clients.  The best part is that freelance makeup artists can pick and choose the type of clients, projects, and hours that suit them. They do fashion shows, photo shoots, personal makeup, corporate events, etc. The outlets in this route need to do an excellent job at selling themselves to get new clients and worker talent, so they have to market themselves well to build a loyal customer base and keep a consistent pipeline of work going.
 
+
+
+
+</div>
 </body>
 
 
