--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html> 
 <head><title>my profile</title>
-<h1>welcome to my profile</h1>
+<h1>Welcome To My Profile</h1>
 <hr style="color:red;background:red;size="20"hr>
 <div id="toph">
 
@@ -14,11 +14,12 @@ title="Kartik">
 
 
 <div id="sunheading">
-<a href="practice.html">my work</a>
+<a href="practice.html"> my work</a>
+<a href="list.html"></a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="http://www.behance.net/kartiksharma172">my behance work</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="https://www.instagram.com/get_glamorous_21?igsh=MW4yGQ3cGwxczBvNg=="> My page</a>
+<a href="https://www.instagram.com/get_glamorous_21?igsh=MW4yGQ3cGwxczBvNg=="> My instagram</a>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 </div>
@@ -39,11 +40,11 @@ text-align:center;
 }
 #about
 {
-background:yellow;
+
 margin-auto;
 width:10%;
-text-align:center;
-color:#dc2583;
+text-align:left;
+color:ARIAL BLACK BOLD
 }
 
 #heading 
