--- a/list.html
+++ b/list.html
@@ -83,7 +83,7 @@ color:red;
 <li>Ethiopia</li>
 </ol>
 
-<ol type="square"  style="background:gold;width:100px">
+<ul type="square"style="background:gold;width:100px"/>
 <li>Fiji</li>
 <li>Gabon</li>
 <li>Hawaii</li>
@@ -91,7 +91,7 @@ color:red;
 <li>Japan</li>
 </ol>
 
-<ul type="circle"style="background:olive;width:300px">
+<ul type="circle"style="background:olive;width:100px">
 <li>India</li>
 <li>Usa</li>
 <li>Bhutan</li>
