--- a/photo gallery.html
+++ b/photo gallery.html
@@ -33,8 +33,8 @@ margin:70px;
 
 .pic:hover
 {
-transform:scale(1.30) rotate(0deg):
-box-shadow:5px 5px 60px magenta:
+transform:scale(1.30) rotate(0deg);
+box-shadow:5px 5px 60px magenta;
 }
 
 </style>
