--- a/practice.html
+++ b/practice.html
@@ -20,17 +20,10 @@ font-size:50px;
 <body>
 <ol>
 <li> <a href="list.html">list</a></li>
-<li> <a href="menulist.html"></a></li>
-<li> <a href="photogallery.html"></a></li>
-<li> <a href="p1.html"></a></li>
-<li> <a href="p2.html"></a></li>
-<li> <a href="p3.html"></a></li>
-<li> <a href="p4.html"></a></li>
-<li> <a href="p5.html"></a></li>
-<li> <a href="p6.html"></a></li>
-<li> <a href="p7.html"></a></li>
-<li> <a href="p8.html"></a></li>
+<li> <a href="menulist.html">menulist.html</a></li>
+<li> <a href="photogallery.html">photogallery.html</a></li>
 
+<li> <a href="photoanimation.html">photoanimation</a></li>
 <a>
 
 </body>
