--- a/practice.html
+++ b/practice.html
@@ -20,8 +20,9 @@ font-size:50px;
 <body>
 <ol>
 <li> <a href="list.html">list</a></li>
-<li> <a href="menulist.html">menulist.html</a></li>
-<li> <a href="photogallery.html">photogallery.html</a></li>
+<li> <a href="menulist.html">menulist</a></li>
+<li> <a href="photogallery.html">photogallery</a></li>
+<li> <a href="responsive_photogallery.html">responsive_photogallery</a></li>
 
 <li> <a href="photoanimation.html">photoanimation</a></li>
 <a>
