--- a/practice.html
+++ b/practice.html
@@ -23,6 +23,7 @@ font-size:50px;
 <li> <a href="menulist.html">menulist</a></li>
 <li> <a href="photogallery.html">photogallery</a></li>
 <li> <a href="responsive_photogallery.html">responsive_photogallery</a></li>
+<li> <a href="menuresponsive.html">menuresponsive</a></li>
 
 <li> <a href="photoanimation.html">photoanimation</a></li>
 <a>
