--- a/menuresponsive.html
+++ b/menuresponsive.html
@@ -36,7 +36,7 @@ a:hover{text-decoration:underline;color:red;}
 
 @media only screen and (max-width: 600px)
 {
-       body{bckground:ik;}
+       body{background:pink;}
        nav{height400px;text-align:center;}
                     display:block;
                     padding:10%;
@@ -44,11 +44,11 @@ a:hover{text-decoration:underline;color:red;}
                     }
 } 
 
-/* small devices(potrait tablets and large phones,600px and up)*/
+/* small devices(potrait tablets and large phones,600px and up) */
 
-@media only screen(min-width:600px)
+@media only screen and(min-width:600px)
 {
-body{background:yan;}
+body{background:cyan;}
 nav{height:10px;text-align:center;}
 nav a{margin:-2px;padding:3%}
 
@@ -58,7 +58,7 @@ nav a{margin:-2px;padding:3%}
 
 @media only screen and (min-width:992px)
 {
-       body{background:urple;}
+       body{background:purple;}
 
 nav{
 width:100%;
