--- a/menuresponsive.html
+++ b/menuresponsive.html
@@ -6,87 +6,103 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <style>
-nav{
-width:100%;
-background:range;
-display:block;
-text-align:right;
-margin-top:12px;
-height:40px;
-}
-nav a{
-font-size:20px;
-margin:52px;
-padding:20px;
-background:#c2f3bf;
-transition:0.50s;
-box-shadow:10px 10px 10px gray;
-border-radius:10px;
-}
-a:hover
-{
-background:#9fec9a;
+nav {
+    width: 100%;
+    background: reen; /* Changed from 'range' */
+    display: block;
+    text-align: right;
+    margin-top: 12px;
+    height: 40px;
 }
 
-a:link{color:#22c618;text-decoration:none;}
-a:visited{color:#22c618}
-a:hover{text-decoration:underline;color:red;}
-
-/* Extra small devices(phones, 600px and down) */
-
-@media only screen and (max-width: 600px)
-{
-       body{background:pink;}
-       nav{height400px;text-align:center;}
-                    display:block;
-                    padding:10%;
-                    margin:0px;
-                    }
-} 
-
-/* small devices(potrait tablets and large phones,600px and up) */
-
-@media only screen and(min-width:600px)
-{
-body{background:cyan;}
-nav{height:10px;text-align:center;}
-nav a{margin:-2px;padding:3%}
-
-
-
+nav a {
+    font-size: 20px;
+    margin: 52px;
+    padding: 20px;
+    background: #c2f3bf;
+    transition: 0.50s;
+    box-shadow: 10px 10px 10px gray;
+    border-radius: 10px;
 }
 
-@media only screen and (min-width:992px)
-{
-       body{background:purple;}
-
-nav{
-width:100%;
-text-align:right;
-}
-nav a{
-font:size:20px;
-margin:52px;
-padding:20px;
+a:link {
+    color: #22c618;
+    text-decoration: none;
 }
 
-
-
-
+a:visited {
+    color: #22c618;
 }
 
+a:hover {
+    text-decoration: underline;
+    color: red;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    body {
+        background: pink;
+    }
+
+    nav {
+        display: flex; /* Use flexbox for vertical layout */
+        flex-direction: column; /* Stack items vertically */
+        align-items: center; /* Center align links */
+        padding: 20px 0;
+        height: auto; /* Adjust height */
+    }
+
+    nav a {
+        margin: 10px 0; /* Adjust vertical margin */
+        padding: 15px; /* Adjust padding for better appearance */
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    body {
+        background: cyan;
+    }
+
+    nav {
+        height: 10px;
+        text-align: center;
+    }
+
+    nav a {
+        margin: -2px;
+        padding: 3%;
+    }
+}
+
+/* Large devices (992px and up) */
+@media only screen and (min-width: 992px) {
+    body {
+        background: purple;
+    }
+
+    nav {
+        width: 100%;
+        text-align: right;
+    }
+
+    nav a {
+        font-size: 20px;
+        margin: 52px;
+        padding: 20px;
+    }
+}
 </style>
-
 
 <body>
 <nav>
-<a href="#">Main course</a> 
-<a href="#">Appetizers</a>
-<a href="#">Bevrages</a>
-<a href="#">Snacks</a> 
-<a href="#">Soups</a>
+    <a href="#">Main course</a> 
+    <a href="#">Appetizers</a>
+    <a href="#">Beverages</a> <!-- Fixed spelling of 'Bevrages' -->
+    <a href="#">Snacks</a> 
+    <a href="#">Soups</a>
 </nav>
 
-
 </body>
-</html>                      
+</html>
