--- a/practice.html
+++ b/practice.html
@@ -1,33 +1,100 @@
 <!doctype html>
-<html>
-<head> <title>Practice </title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practice</title>
 
-<div id="topheader"
+    <!-- Link to Google Fonts for custom fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-<h1> Practice</h1>
-</div>
+    <style>
+        /* General styles */
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        /* Top header styling */
+        #topheader {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 50px 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        #topheader h1 {
+            font-size: 60px;
+            margin: 0;
+            text-transform: uppercase;
+        }
+
+        /* Styled navigation list */
+        ol {
+            list-style: none;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 600px;
+            border-radius: 8px;
+        }
+
+        ol li {
+            font-size: 18px;
+            margin: 15px 0;
+            padding: 10px;
+            text-align: center;
+        }
+
+        ol li a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            transition: all 0.3s ease;
+        }
+
+        /* Hover effect for links */
+        ol li a:hover {
+            color: #4CAF50;
+            text-decoration: underline;
+        }
+
+        /* Add responsive design */
+        @media (max-width: 600px) {
+            #topheader h1 {
+                font-size: 40px;
+            }
+
+            ol {
+                padding: 10px;
+            }
+
+            ol li {
+                font-size: 16px;
+            }
+        }
+    </style>
 </head>
 
-<style>
-
-#topheader
-{
-text-align:center;
-font-size:50px;
-}
-</style>
-
 <body>
-<ol>
-<li> <a href="list.html">list</a></li>
-<li> <a href="menulist.html">menulist</a></li>
-<li> <a href="photogallery.html">photogallery</a></li>
-<li> <a href="responsive_photogallery.html">responsive_photogallery</a></li>
-<li> <a href="menuresponsive.html">menuresponsive</a></li>
+    <!-- Header Section -->
+    <div id="topheader">
+        <h1>Practice</h1>
+    </div>
 
-<li> <a href="photoanimation.html">photoanimation</a></li>
-<a>
-
+    <!-- Navigation Links -->
+    <ol>
+        <li><a href="div.html">div</a></li>
+        <li><a href="list.html">List</a></li>
+        <li><a href="menulist.html">Menu List</a></li>
+        <li><a href="photogallery.html">Photo Gallery</a></li>
+        <li><a href="responsive_photogallery.html">Responsive Photo Gallery</a></li>
+        <li><a href="menuresponsive.html">Menu Responsive</a></li>
+        <li><a href="photoanimation.html">Photo Animation</a></li>
+    </ol>
 </body>
-
-<html>
+</html>
