--- a/practice.html
+++ b/practice.html
@@ -59,7 +59,7 @@
 
         /* Hover effect for links */
         ol li a:hover {
-            color: #4CAF50;
+            color:green;
             text-decoration: underline;
         }
 
