--- a/practice.html
+++ b/practice.html
@@ -88,6 +88,7 @@
 
     <!-- Navigation Links -->
     <ol>
+        <li><a href="flex.html">card</a></li>
 	<li><a href="card.html">card</a></li>
         <li><a href="div.html">div</a></li>
         <li><a href="list.html">List</a></li>
