--- a/flex.html
+++ b/flex.html
@@ -62,8 +62,8 @@
     }
 
     .card ol li {
-      list-style:none;
-      font-size:20px;
+      list-style: none;
+      font-size: 20px;
     }
     #main
     {
@@ -126,7 +126,7 @@ list-style-type: none;
   <div id="main">
 
 
-      <div class="card1">
+      <div class="card" id="card1">
     <img src="images/p18.jpeg" class="pic" alt="Long Coat">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Long Coat
@@ -142,7 +142,7 @@ list-style-type: none;
       </li>
     </ol>
   </div>
- <div class="card2">
+ <div class="card" id="card2">
     <img src="images/p19.jpeg" class="pic" alt="Denim">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Denim
@@ -158,7 +158,7 @@ list-style-type: none;
       </li>
     </ol>
   </div>
-<div class="card3">
+<div class="card" id="card3">
     <img src="images/p20.jpeg" class="pic" alt="Leather Jacket">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Leather Jacket
@@ -174,7 +174,7 @@ list-style-type: none;
       </li>
     </ol>
   </div>
-<div class="card4">
+<div class="card" id="card4">
     <img src="images/p21.jpeg" class="pic" alt="Baggy Trouser">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Baggy Trouser
@@ -190,7 +190,7 @@ list-style-type: none;
       </li>
     </ol>
   </div>
-<div class="card5">
+<div class="card" id="card5">
     <img src="images/p22.jpeg" class="pic" alt=" Coat">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Coat
@@ -206,7 +206,7 @@ list-style-type: none;
       </li>
     </ol>
   </div>
-<div class="card6">
+<div class="card" id="card6">
     <img src="images/p23.jpeg" class="pic" alt="Middy">
     <h3 style="text-indent: 0; text-align: center; background: orange; padding: 3px; box-shadow: 5px 5px 5px gray">
       Middy
