--- a/flex.html
+++ b/flex.html
@@ -32,14 +32,42 @@
     }
 
     #menu {
-      width: 70%;
-      height: 20px;
+      width: 100%;    
       background: gray;
-      margin-top: 10px;
-      padding: 20px;
-      margin-right: 400px;
+      padding: 15px;
+      text-align:center;
     }
 
+    #menu ul {
+     display:inline-block;
+     padding: 0; 
+    }
+
+    #menu ul li a {
+     display: inline-block;
+     margin:0 20px;
+    }
+    
+     #menu ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 20px;
+      padding: 10px 15px;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    #menu ul li a:hover {
+      background-color: darkgray;
+    }
+
+
+    #main {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      padding: 10px;
+    }
     .card {
       width: 20%;
       height: auto;
@@ -55,6 +83,10 @@
       margin-left: 100px;
       list-style-type: none;
     }
+      .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    }
 
     .pic {
       width: 100%;
@@ -65,6 +97,23 @@
       list-style: none;
       font-size: 20px;
     }
+
+      button {
+      color: white;
+      font-size: 20px;
+      background: teal;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: darkcyan;
+    }
+
+
+
     #main
     {
     width:99%;
@@ -122,7 +171,15 @@ list-style-type: none;
   </span>
   </div>
 
-  <div id="menu">Menu</div>
+   <div id="menu">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
   <div id="main">
 
 
