--- a/practice.html
+++ b/practice.html
@@ -88,7 +88,8 @@
 
     <!-- Navigation Links -->
     <ol>
-        <li><a href="flex.html">card</a></li>
+        <li><a href="scrolling.html">scrolling</a></li>
+        <li><a href="flex.html">flex</a></li>
 	<li><a href="card.html">card</a></li>
         <li><a href="div.html">div</a></li>
         <li><a href="list.html">List</a></li>
