--- a/practice.html
+++ b/practice.html
@@ -88,6 +88,7 @@
 
     <!-- Navigation Links -->
     <ol>
+        <li><a href="table.html">table</a></li>
         <li><a href="scrolling.html">scrolling</a></li>
         <li><a href="flex.html">flex</a></li>
 	<li><a href="card.html">card</a></li>
