--- a/practice.html
+++ b/practice.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
 
@@ -88,6 +88,7 @@
 
     <!-- Navigation Links -->
     <ol>
+        <li><a href="form.html">form</a></li>
         <li><a href="table.html">table</a></li>
         <li><a href="scrolling.html">scrolling</a></li>
         <li><a href="flex.html">flex</a></li>
