--- a/practice.html
+++ b/practice.html
@@ -88,6 +88,9 @@
 
     <!-- Navigation Links -->
     <ol>
+        <li><a href="register.html">register</a></li>
+        <li><a href="slider.html">slider</a></li>
+        <li><a href="banner.html">banner</a></li>
         <li><a href="form.html">form</a></li>
         <li><a href="table.html">table</a></li>
         <li><a href="scrolling.html">scrolling</a></li>
