--- a/randomcolor.html
+++ b/randomcolor.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do while Loop in JS</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Do while Loop in JS</h1>
+    <h1>Do while Loop in js</h1>
 
     <div style="border-radius:20px;width:40%;background:black;padding:20px;">
         <script>
             var a = 1;
-            var mycolor, r, g, b;
+            var mycolor, r ,g, b; 
 
+            
             // Define the function OUTSIDE the loop
             function changebackground(t) {
                 document.body.style.background = t.style.background;
             }
-
+           
             do {
                 r = Math.round(Math.random() * 255);
                 g = Math.round(Math.random() * 255);
