--- a/del.html
+++ b/del.html
@@ -3,300 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kartik Sharma - Creative UI/UX Designer</title>
-    <style>
-        /* Global Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background: #f7f8fc;
-            color: #333;
-            overflow-x: hidden;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 30px;
-        }
-
-        header {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        header h1 {
-            font-size: 48px;
-            color: #222;
-        }
-
-        header p {
-            font-size: 20px;
-            color: #777;
-            margin-bottom: 30px;
-        }
-
-        header img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 5px solid #007bff;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .profile-links {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .profile-links a {
-            font-size: 18px;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px 25px;
-            margin: 0 15px;
-            border-radius: 30px;
-            border: 2px solid #007bff;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .profile-links a:hover {
-            background-color: #007bff;
-            color: #fff;
-        }
-
-        .about-me {
-            background-color: #fff;
-            padding: 60px 0;
-            margin-top: 50px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-            text-align: center;
-        }
-
-        .about-me h2 {
-            font-size: 32px;
-            color: #222;
-            margin-bottom: 20px;
-        }
-
-        .about-me p {
-            font-size: 18px;
-            color: #555;
-            line-height: 1.8;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .projects {
-            padding: 60px 0;
-            background-color: #f4f5fa;
-            text-align: center;
-        }
-
-        .projects h2 {
-            font-size: 32px;
-            color: #222;
-            margin-bottom: 30px;
-        }
-
-        .projects .project-card {
-            display: inline-block;
-            width: 280px;
-            margin: 15px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .projects .project-card:hover {
-            transform: translateY(-10px);
-        }
-
-        .projects .project-card img {
-            width: 100%;
-            height: 180px;
-            border-radius: 8px;
-            object-fit: cover;
-            margin-bottom: 15px;
-        }
-
-        .projects .project-card h3 {
-            font-size: 20px;
-            color: #222;
-            margin-bottom: 10px;
-        }
-
-        .projects .project-card p {
-            font-size: 16px;
-            color: #777;
-        }
-
-        .skills {
-            padding: 60px 0;
-            background-color: #fff;
-            text-align: center;
-        }
-
-        .skills h2 {
-            font-size: 32px;
-            color: #222;
-            margin-bottom: 30px;
-        }
-
-        .skills .skill {
-            display: inline-block;
-            margin: 10px;
-            padding: 20px;
-            background-color: #007bff;
-            color: #fff;
-            border-radius: 30px;
-            font-size: 18px;
-        }
-
-        .contact {
-            padding: 60px 0;
-            background-color: #f4f5fa;
-            text-align: center;
-        }
-
-        .contact h2 {
-            font-size: 32px;
-            color: #222;
-            margin-bottom: 30px;
-        }
-
-        .contact p {
-            font-size: 18px;
-            color: #555;
-        }
-
-        .contact a {
-            font-weight: bold;
-            font-size: 18px;
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .contact a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            padding: 20px;
-            background-color: #222;
-            color: #fff;
-            text-align: center;
-        }
-
-        footer p {
-            margin: 0;
-            font-size: 16px;
-        }
-
-        @media only screen and (max-width: 768px) {
-            .profile-links a {
-                display: block;
-                margin: 10px 0;
-                width: 100%;
-                padding: 15px 0;
-            }
-
-            .projects .project-card {
-                display: block;
-                width: 90%;
-                margin: 20px auto;
-            }
-
-            header h1 {
-                font-size: 36px;
-            }
-
-            header p {
-                font-size: 18px;
-            }
-
-            .about-me p, .contact p {
-                font-size: 16px;
-            }
-        }
-
-        @media only screen and (max-width: 480px) {
-            header h1 {
-                font-size: 28px;
-            }
-
-            header img {
-                width: 150px;
-                height: 150px;
-            }
-
-            .about-me p {
-                font-size: 14px;
-                padding: 0 15px;
-            }
-
-            .skills .skill {
-                padding: 15px;
-                font-size: 16px;
-            }
-
-            .contact p {
-                font-size: 14px;
-            }
-        }
-    </style>
+    <title>Do while Loop in JS</title>
 </head>
 <body>
+    <h1>Do while Loop in JS</h1>
 
-    <div class="container">
+    <div style="border-radius:20px;width:40%;background:black;padding:20px;">
+        <script>
+            var a = 1;
+            var mycolor, r, g, b;
 
-        <!-- Header Section -->
-        <header>
-            <h1>Kartik Sharma</h1>
-            <img src="images/meee.jpeg" alt="Profile Picture">
-            <p>UI/UX Designer | Digital Creative</p>
-        </header>
+            // Define the function OUTSIDE the loop
+            function changebackground(t) {
+                document.body.style.background = t.style.background;
+            }
 
-        <!-- Links Section -->
-        <div class="profile-links">
-            <a href="practice.html">My Work</a>
-            <a href="https://www.instagram.com/get_glamorous_21?igsh=MW4yGQ3cGwxczBvNg==">My Instagram</a>
-            <a href="http://www.behance.net/kartiksharma172">My Behance Work</a>
-            <a href="jspractice.html">Javascript</a>
-        </div>
+            do {
+                r = Math.round(Math.random() * 255);
+                g = Math.round(Math.random() * 255);
+                b = Math.round(Math.random() * 255);
 
-        <!-- About Me Section -->
-        <section class="about-me">
-            <h2>About Me</h2>
-            <p>Hi! I'm Kartik Sharma, a passionate UI/UX Designer. I have worked on a variety of projects ranging from web design to mobile applications, with a strong emphasis on user-centered design. I strive to blend creativity and functionality to produce designs that not only look good but also provide exceptional user experiences.</p>
-        </section>
+                mycolor = `rgb(${r},${g},${b})`;
 
-        <!-- Skills Section -->
-        <section class="skills">
-            <h2>My Skills</h2>
-            <div class="skill">Sketch</div>
-            <div class="skill">Adobe XD</div>
-            <div class="skill">HTML & CSS</div>
-            <div class="skill">Prototyping</div>
-        </section>
+                document.write(`<button onclick="changebackground(this)" style="cursor:pointer;margin:3px;border-radius:20px;width:30px;height:30px;background:${mycolor}"></button>`);
 
-        <!-- Contact Section -->
-        <section class="contact">
-            <h2>Contact Me</h2>
-            <p>If you'd like to collaborate or have any questions, feel free to reach out!</p>
-            <p>Email: <a href="mailto:kartiksharma21800@gmail.com">kartiksharma21800@gmail.com</a></p>
-        </section>
-
+                a++;
+            } while (a <= 50);
+        </script>
     </div>
-
-    <!-- ✅ Correct placement of the JavaScript file -->
-    <script src="js/array.js"></script>
-
 </body>
 </html>
