--- a/del.html
+++ b/del.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.shuffle.min.js"></script>
-    <style>
-        #myslider {
-            width: 70%;
-            margin: auto;
-            box-shadow: 10px 10px 10px gray;
-        }
-        .pic {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-        }
-    </style>
+    <title>Do while Loop in JS</title>
 </head>
 <body>
-    <h1>A Trial</h1>
-    <div id="myslider" class="cycle-slideshow" data-cycle-fx="shuffle" data-cycle-timeout="2000">
-        <img src="images/p25.jpeg" class="pic">
-        <img src="images/p26.jpeg" class="pic">
-        <img src="images/p28.jpeg" class="pic">
-        <img src="images/p30.jpeg" class="pic">
-        <img src="images/p31.jpeg" class="pic">
-    </div>    
+    <h1>Do while Loop in JS</h1>
+
+    <div style="border-radius:20px;width:40%;background:black;padding:20px;">
+        <script>
+            var a = 1;
+            var mycolor, r, g, b;
+
+            // Define the function OUTSIDE the loop
+            function changebackground(t) {
+                document.body.style.background = t.style.background;
+            }
+
+            do {
+                r = Math.round(Math.random() * 255);
+                g = Math.round(Math.random() * 255);
+                b = Math.round(Math.random() * 255);
+
+                mycolor = `rgb(${r},${g},${b})`;
+
+                document.write(`<button onclick="changebackground(this)" style="cursor:pointer;margin:3px;border-radius:20px;width:30px;height:30px;background:${mycolor}"></button>`);
+
+                a++;
+            } while (a <= 50);
+        </script>
+    </div>
 </body>
 </html>
