--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
             <a href="practice.html">My Work</a>
             <a href="https://www.instagram.com/get_glamorous_21?igsh=MW4yGQ3cGwxczBvNg==">My Instagram</a>
             <a href="http://www.behance.net/kartiksharma172">My Behance Work</a>
-             <a href="javascript/jspractice.html">Javascript</a>
-             <a href="jq/jqpractice.html">jq</a>
-             <a href="bstrap/bspractice.html">bootstrap</a>
+             <a href="jspractice.html">Javascript</a>
+             <a href="jqpractice.html">jq</a>
+             <a href="bspractice.html">bootstrap</a>
              
 
            
