--- a/bspractice.html
+++ b/bspractice.html
@@ -89,6 +89,7 @@
     <!-- Navigation Links -->
     <ol>
         <li><a href="layout.html">layout</a></li>
+         <li><a href="bsbanner.html">bsbanner</a></li>
        
     </ol>
 </body>
